# testopia

./: .gitignore  README.md  TODO.md  behave.ini  justfile  main.py  pyproject.toml  requirements-test.txt  requirements.txt  test.py
.github/: pull_request_template.md
.github/workflows/: main.yml  pre-commit.yaml
results/: results.txt
sample/: environment.py
sample/features/: sanity.feature
sample/steps/: basics_step.py
testopia/: __init__.py  errors.py  parser.py  runner.py
